src/objects/FieloELR__AnswerOption__c.object
<CustomObject>
    <fields>
        <fullName>FieloELR__AnswerOptionText__c</fullName>
        <label>Answer Option Text</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>FieloELR__IsCorrect__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Correct</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FieloELR__MatchingText__c</fullName>
        <label>Matching Text</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>FieloELR__OrderFormula__c</fullName>
        <formula>IF( FieloELR__Question__r.FieloELR__ShuffleAnswerOptions__c ,
mod( 
    (
       ( value(mid(text(NOW()),18,2)) + value(mid(text(NOW()),12,2)) ) *
       ( value(mid(text(NOW()),18,2)) + value(mid(text(NOW()),15,2)) ) 
    ) / FieloELR__Order__c
    , ( FieloELR__Order__c + 100 )

), FieloELR__Order__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Order Formula</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FieloELR__Order__c</fullName>
        <label>Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FieloELR__Question__c</fullName>
        <label>Question</label>
        <referenceTo>FieloELR__Question__c</referenceTo>
        <relationshipLabel>Answer Options</relationshipLabel>
        <relationshipName>AnswerOptions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <label>Answer Option</label>
    <listViews>
        <fullName>FieloELR__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>AO-{00000000}</displayFormat>
        <label>Answer Option Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Answer Options</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>FieloELR__AnswerTextRequired</fullName>
        <active>true</active>
        <description>The answer option text is required.</description>
        <errorConditionFormula>AND( TEXT(FieloELR__Question__r.FieloELR__Type__c) &lt;&gt; &apos;Matching Options&apos;, ISBLANK( FieloELR__AnswerOptionText__c ))</errorConditionFormula>
        <errorDisplayField>FieloELR__AnswerOptionText__c</errorDisplayField>
        <errorMessage>The answer option text is required.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FieloELR__CannotChangeQuestion</fullName>
        <active>true</active>
        <errorConditionFormula>ISCHANGED( FieloELR__Question__c )</errorConditionFormula>
        <errorDisplayField>FieloELR__Question__c</errorDisplayField>
        <errorMessage>Cannot change the related question.</errorMessage>
    </validationRules>
</CustomObject>